--- a/views/partials/admin/bannerEditPopup.ejs
+++ b/views/partials/admin/bannerEditPopup.ejs
@@ -2,33 +2,46 @@
 <%-include("head.ejs")%>
 <body class="bg-slate-200 ">
     <div class="fixed inset-0 flex justify-center items-center bg-[rgba(0,0,0,0.3)] hidden" id="bannerEditPopup">
-        <form action="" class=" bg-white rounded-lg w-fit  py-8 px-5 relative space-y-6 text-sm pr-8 pt-10">
+        <form action="/admin/banner" id="bannerForm"  method="post" enctype="multipart/form-data" class=" bg-white rounded-lg w-fit  py-8 px-5 relative space-y-6 text-sm pr-8 pt-10">
+            <input type="text" name="editBannerId" id="editBannerId" hidden>
            <div  class="space-x-10 flex justify-between">
             <label for="">Title</label>
-            <input type="text" name="" id="" class="border-gray-400 border-[.1px] w-80 rounded-full px-2">
+            <input type="text" name="title" id="bannerTitle" class="border-gray-400 border-[.1px] w-80 rounded-full px-2">
            </div>
            <div  class="space-x-10 flex justify-between">
             <label for="">Start Date</label>
-            <input type="date" name="" id="" class="border-gray-400 border-[.1px] w-80 rounded-full px-2 text-[#666666]">
+            <input type="date" name="startDate" id="bannerStartDate" class="border-gray-400 border-[.1px] w-80 rounded-full px-2 text-[#666666]">
            </div>
            <div  class="space-x-10 flex justify-between">
             <label for="">End Date</label>
-            <input type="date" name="" id="" class="border-gray-400 border-[.1px] w-80 rounded-full px-2 text-[#666666]">
+            <input type="date" name="endDate"  id="bannerEndDate" class="border-gray-400 border-[.1px] w-80 rounded-full px-2 text-[#666666]">
            </div>
            <div class="flex  space-x-5 items-center">
             <p class="text-sm">Upload image</p>
             <div class="">
-                <input type="file" name="" id="productImage" hidden >
-                <label for="productImage" class="flex items-center space-x-2 border-dotted border-[.1px] border-gray-400 px-2 w-fit py-1">
-                    <img src="/images/imageUpload.png" alt="" class="h-4">
-                    <p class="text-sm text-[#666666]">Browse image</p>
+                <input type="file" name="bannerImage" id="productImageEdit" hidden >
+                <label for="productImageEdit" class="flex items-center space-x-2 border-dotted border-[.1px] border-gray-400 px-2 w-fit py-1">
+                    <img src="" class="w-[100px] h-[80px] object-cover rounded-sm " id="preview-imageEdit" alt="">
+                    <img src="/images/imageUpload.png hidden" alt="" class="h-4">
+                    <p class="text-sm text-[#666666] hidden">Browse image</p>
+                    <div class="flex items-center justify-center">
+                        <img class="h-3 " src="/images/tick.png" id="tickImage" alt="">
+                    <p class="text-xs text-[#666666]  font-medium   " id="imageDone">Done</p>
+                    </div>
                 </label>
             </div>
             
     </div>
            <div class="w-full ">
             <button class="bg-[#DAA520] text-white w-full rounded-full  text-base font-normal ">
-                Save
+                <span id="saveSpanEdit">Save</span>
+                <div class="flex items-center justify-center font-normal hidden" id="loadingEdit">
+                    <svg aria-hidden="true" role="status" class="inline w-4  h-4 me-3 text-white animate-spin" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="#E5E7EB"/>
+                        <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentColor"/>
+                        </svg>
+                        Uploading ... 
+                </div>
            </button>
         </div>
            <div class="absolute -top-4 cursor-pointer right-2" onclick="editBannerEdit()">
