--- a/views/partials/admin/categoryEditPopup.ejs
+++ b/views/partials/admin/categoryEditPopup.ejs
@@ -7,7 +7,7 @@
            <div  class="space-x-10 flex justify-between">
             <label for="">Category</label>
             <div>
-                <input  type="text" name="categoryName" id="categoryEditName" class="px-2 border-gray-400 border-[.1px] w-80 rounded-full ">
+                <input disabled  type="text" name="categoryName" id="categoryEditName" class="px-2 border-gray-400 border-[.1px] w-80 rounded-full ">
                 <span id="categoryNameEditError" class=" text-[10px] text-red-600 space-y-0  hidden">Category name cannot be empty !!</span>
             </div>
             <input name="id" id="Id" class="hidden" type="text">
