--- a/views/user/category.ejs
+++ b/views/user/category.ejs
@@ -7,15 +7,15 @@
     <main class="px-3 lg:px-10">
         <div id="TopCategorycontainer" class="grid grid-cols-2  gap-4 space-x-2 md:space-x-4   overflow-auto relative mt-6 lg:mt-20"> <!--Top category sldier -->
             <%categories.forEach(function(data){%>
-            <div class="bg-[#F1F1F1] max-h-fit mb-2 lg:mb-6 lg:min-w-[150px]  min-w-[130px] md:min-w-[102px] rounded-lg  drop-shadow-md md:flex md:items-start   hover:drop-shadow-[10px_10px_3px_rgba(0,0,0,0.1)] cursor-pointer ">
+            <a href="/user/products/<%= encodeURIComponent(data.categoryName)%>" class="hover:scale-105 bg-[#F1F1F1] max-h-fit mb-2 lg:mb-6 lg:min-w-[150px]  min-w-[130px] md:min-w-[102px] rounded-lg  md:flex md:items-start   hover:drop-shadow-xl border-b-[1px] border-b-[#666666] border-r-[.1px] border-r-[#666666] cursor-pointer ">
                 <img class="rounded-t-lg lg:w-[150px] lg:h-[120px] w-full md:w-[102px] h-[120px] object-cover grayscale-[40%] lg:rounded-lg md:min-w-[30%] md:min-h-full" src="<%=data.imageUrl %>" alt="">
-                <div class="flex flex-col justify-center items-center lg:block">
+                <div class="flex py- flex-col justify-center items-center lg:block">
                     <span class="py-2  text-sm lg:max-w-full max-w-40 truncate font-medium text-[#333333]  lg:py-2  lg:text-[#333333] md:justify-start md:ps-3 lg:ps-9 lg:text-sm md:font-semibold capitalize p-3 "><%=data.categoryName%></span>
                     <div class="hidden md:block w-full opacity-70">
                         <p class="ps-9 pe-3 pb-3 text-xs md:text-[#666666] lg:ps-9  md:ps-3 "><%=data.categoryDescription%></p>
                     </div>
                 </div>
-             </div>
+            </a>
              <%})%>
         </div>
     </main>
