--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -5,11 +5,14 @@
 <%-include('../partials/user/HeaderDesktopUser.ejs')%>
 <body class="bg-[#F2F2F2] flex flex-col h-screen">
 
-
-
+  
+    
     <div class="lg:flex lg:justify-around ">
         <div class=" lg:mt-12"><!--Filtering-->
-            <form class="drop-shadow-sm rounded-md pb-14 space-y-10 pr-28 pl-4 bg-white hidden lg:block">
+            <div class=" hidden lg:flex px-5 py-2 bg-[#55808a] rounded-t-md   <%  if(products.length===0){ %>lg:hidden<% } %>">
+                <h1 class="text-white font-semibold rounedtmd"><%=products[0]?.category %></h1>
+            </div>
+            <form class="drop-shadow-sm rounded-md pb-8 mb-8 space-y-10 pr-28 pl-4 bg-white hidden lg:block <%  if(products.length===0){ %>lg:hidden<% } %>">
                 <div class=" mb-2 pt-2"><!--Condition-->
                     <div class="text-sm font-medium py-2">
                         CONDITION
@@ -87,116 +90,35 @@
             </form>
         </div>
         <div> <!--Novel conatiner-->
-            <div class="grid-cols-2 lg:grid-cols-6 lg:gap-x-8 gap-x-3 sm:grid-cols-4 mt-3 w-full grid px-5 gap-y-4 lg:mt-12"> <!--Books group container-->
+            <div class="grid-cols-2 md:grid-cols-5 lg:grid-cols-4 xl:grid-cols-5 lg:gap-x-10 xl:gap-x-6 gap-x-3  sm:grid-cols-4 mt-3 w-full grid px-5 gap-y-4 lg:mt-12"> <!--Books group container-->
                 <!--item-->
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="/images/alchemist.jpeg" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm">The hunt of basker ville vol 2</p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs">Sir arther conon doyal hfsfasfa </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm">15% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm">250</span> <span class="text-xs font-bold lg:text-sm">150</span></div>
-                    </div>
-                    <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-20">
-                        <button class="flex bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                <!--item2-->
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="/images/alchemist.jpeg" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm">The hunt of basker ville vol 2</p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs">Sir arther conon doyal hfsfasfa </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm">15% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm">250</span> <span class="text-xs font-bold lg:text-sm">150</span></div>
-                    </div>
-                    <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-20">
-                        <button class="flex bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                <!--item3-->
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="/images/alchemist.jpeg" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm">The hunt of basker ville vol 2</p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs">Sir arther conon doyal hfsfasfa </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm">15% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm">250</span> <span class="text-xs font-bold lg:text-sm">150</span></div>
-                    </div>
-                    <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-20">
-                        <button class="flex bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                <!--item4-->
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="/images/alchemist.jpeg" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm">The hunt of basker ville vol 2</p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs">Sir arther conon doyal hfsfasfa </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm">15% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm">250</span> <span class="text-xs font-bold lg:text-sm">150</span></div>
-                    </div>
-                    <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-20">
-                        <button class="flex bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                <!--item5-->
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="/images/alchemist.jpeg" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm">The hunt of basker ville vol 2</p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs">Sir arther conon doyal hfsfasfa </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm">15% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm">250</span> <span class="text-xs font-bold lg:text-sm">150</span></div>
-                    </div>
-                    <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-20">
-                        <button class="flex bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                <!--item6-->
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="/images/alchemist.jpeg" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm">The hunt of basker ville vol 2</p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs">Sir arther conon doyal hfsfasfa </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm">15% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm">250</span> <span class="text-xs font-bold lg:text-sm">150</span></div>
-                    </div>
-                    <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-20">
-                        <button class="flex bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-                   <!--item-->
+                <% if(products.length===0){%>
+                    <div class="my-auto mx-auto absolute inset-0 flex items-center justify-center mb-52 md:mb-0 ">
+                        <img class="w-2/3 md:w-72 mx-auto opacity-30" src="/images/No_Product_Found.png" alt="No products found">
+                      </div>
+                 <% }else{ %>
+                    <% products.forEach(function(data){ %>
+                        <a href="/user/product/<%= encodeURIComponent(data._id)%>" class="bg-white  hover:bg-slate-50 hover:drop-shadow-md hover:scale-105 md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3   "> 
+                            <div class="flex items-center justify-center z-10"> 
+                                <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="<%=data.imageUrl%>" alt="">
+                            </div>
+                            <div class="flex flex-col items-center z-10 ">
+                                <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm"><%=data.bookName%></p>
+                                <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs"><%=data.author%> </p>
+                                <div class="mt-[-5px] lg:mt-[1px]">
+                                    <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm"><%=data.discount%>% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm"><%=data.MRP%></span> <span class="text-xs font-bold lg:text-sm"><%=data.salePrice%></span></div>
+                            </div>
+                            <!--my cart-->
+                            <div class="absolute top-2 -right-[12%] md:-right-[12%] lg:-right-[10%] z-50">
+                                <button class="flex z-50 bg-[#DAA520] hover:bg-[#c4951d] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] lg:px-2 lg:py-1">
+                                    <p class="text-xs lg:text-sm font-medium ">Add</p>
+                                    <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
+                                </button>
+                            </div>
+                        </a>
+                    <%})%>
+                <% } %> 
+               
             </div>
         </div>
     </div>
